# apps/api/tests/fixtures/openapi_contract_snapshot.json
@@ -2472,12 +2472,6 @@
       "422"
     ]
   },
-  "/matches/{match_id}/complete": {
-    "PUT": [
-      "200",
-      "422"
-    ]
-  },
   "/matches/{match_id}/decline": {
     "PUT": [
       "200",
